--- a/resume.tex
+++ b/resume.tex
@@ -7,7 +7,7 @@
 \begin{document}
 \pagenumbering{gobble} % suppress displaying page number
 
-\name{Bin Yuan}
+\name{Yuhang Sun}
 
 \basicInfo{
   \email{yuanbin2014@gmail.com} \textperiodcentered\ 
